# cyclejs-autocomplete-haskell-backend

./: Dockerfile  Main.hs  README.md  Trie.hs  autocomplete-demo.cabal
cyclejs/: package.json
cyclejs/.scripts/: build.js  start.js
cyclejs/public/: index.html
cyclejs/src/: app.js  index.js
static/: bower.json  bundle.js  index.html
