name:                autocomplete-demo
version:             0.0.1
synopsis:            haskell backend + react frontend
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              functor-soup
maintainer:          functor.soup@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable autocomplete-demo
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base == 4.8.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , monad-logger
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , aeson
                     , containers
                     , directory
